# bdlaws-3.5

./: .gitignore  README.md  ollamareadme.md  pyproject.toml
artifacts/training/lora/: README.md
artifacts/training/lora/checkpoint-1/: README.md
configs/: project.yaml  rag.yaml  train.local-6gb.yaml  train.yaml
ollama/: Modelfile
src/bdlaw_ollama/: __init__.py  api.py  chunking.py  cli.py  config.py  evaluation.py  export_ollama.py  ingest.py  normalize.py  policy.py  prompts.py  retrieval.py  sft_data.py  train.py  utils.py
tests/: test_chunking.py  test_export.py  test_ingest.py  test_normalize.py  test_policy.py  test_retrieval.py  test_sft_data.py
