[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bdlaw-ollama"
version = "0.1.0"
description = "Hybrid RAG + QLoRA pipeline for Bangladesh law data and Ollama publishing."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "Codex" }
]
dependencies = [
  "click>=8.1.7,<9",
  "fastapi>=0.115.0,<1",
  "faiss-cpu>=1.8.0,<2",
  "numpy>=1.26.4,<2.3",
  "PyYAML>=6.0.1,<7",
  "rank-bm25>=0.2.2,<0.3",
  "requests>=2.32.3,<3",
  "sentence-transformers>=3.0.1,<4",
  "tqdm>=4.66.4,<5",
  "uvicorn>=0.30.6,<1",
]

[project.optional-dependencies]
train = [
  "accelerate>=0.34.2,<1.3",
  "bitsandbytes>=0.43.1,<0.46; platform_system == 'Linux'",
  "datasets>=2.21.0,<4",
  "peft>=0.12.0,<0.15",
  "transformers>=4.44.2,<5",
  "trl>=0.10.1,<0.16",
]
api = [
  "httpx>=0.27.2,<1",
]
dev = [
  "pytest>=8.3.2,<9.1",
]

[project.scripts]
bdlaw = "bdlaw_ollama.cli:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
